# parsing_library

./: .gitignore  Doxyfile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: mainpage.md
src/rdm_parser/: __init__.py  standardizer.py
src/rdm_parser/parsers/: __init__.py  base.py  bz011_parser.py  greenlight_parser.py
tests/: test_bz011_parser.py  test_greenlight_parser.py  test_standardizer.py
tests/fixtures/bz011/: missing_key.json  negative_area.json  string_area.json  valid_small.json
tests/fixtures/greenlight/: bad_rows.csv  missing_column.csv  no_header.csv  valid_small_crlf.csv
tests/fixtures/standardizer/: extension_lies.csv  greenlight_as_txt.txt  junk.txt
